--- a/src/component/Display.css
+++ b/src/component/Display.css
@@ -11,3 +11,10 @@
   font-size: 2.5rem;
   padding: 0.2rem 0.7rem 0.1rem 0.5rem;
 }
+
+@media screen and (max-width: 480px) {
+  .component-display > div {
+    font-size: 6.5rem;
+    padding: 0.2rem 0.7rem 0.1rem 0.5rem;
+  }
+}
